Fix progress bar in the statusbar for some themes.

--- a/src/freenet/clients/http/staticfiles/themes/clean/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/theme.css
@@ -704,6 +704,11 @@ div#statusbar div {
 	display: inline;
 }
 
+div#statusbar div.progressbar {
+	display: inline-block;
+	margin-bottom: -3px;
+}
+
 div#statusbar div.separator {
 	display: inline-block;
 	background-color: #d0d0d0;
