--- a/src/freenet/clients/http/staticfiles/themes/sky/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky/theme.css
@@ -702,6 +702,17 @@ div#statusbar div {
 	display: inline;
 }
 
+div#statusbar div.progressbar {
+	display: inline-block;
+	margin-bottom: -3px;
+	float: none;
+}
+
+div#statusbar div.progressbar div.progress_fraction_finalized {
+	float: left;
+	overflow: hidden;
+}
+
 div#statusbar div.infobox-header {
 	display: none;
 }
