--- a/src/freenet/clients/http/staticfiles/themes/boxed/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/boxed/theme.css
@@ -471,6 +471,11 @@ div#statusbar div {
 	display: inline;
 }
 
+div#statusbar div.progressbar {
+	display: inline-block;
+	margin-bottom: -3px;
+}
+
 div#statusbar div.infobox-header {
 	display: none;
 }
