put the status bar on the bottom on themes where it is currently at the top

--- a/src/freenet/clients/http/staticfiles/themes/boxed/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/boxed/theme.css
@@ -461,6 +461,11 @@ div#statusbar-container {
 	padding: 5px;
 	font-size: 1.2em;
 	border: 1px solid black;
+	position:fixed;
+	bottom:0;
+	right:0;
+	left:0;
+	z-index:18;
 }
 
 div#statusbar {
