fix for status bar cutoff issue on minimalblue theme

--- a/src/freenet/clients/http/staticfiles/themes/minimalblue/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/minimalblue/theme.css
@@ -15,7 +15,7 @@ body{
 width: 100%;
 margin: auto;
 padding-top: 5px;
-padding-bottom: 5px;
+padding-bottom: 2em;
 color: #fff;
 background: #2573b8;
 }
