--- a/src/freenet/clients/http/staticfiles/base.css
+++ b/src/freenet/clients/http/staticfiles/base.css
@@ -8,3 +8,15 @@
 .toggleable:hover .hidden {
     display: block;
 }
+
+/* plugin manager settings */
+
+div.plugin-group {
+        margin-bottom: 0.5em;
+}
+
+div.plugin-group-title {
+        margin-bottom: 0.5em;
+        font-weight: bold;
+}
+
