--- a/src/freenet/clients/http/staticfiles/themes/minimalblue/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/minimalblue/theme.css
@@ -1,18 +1,19 @@
-/* minimalblue */
-
-/*****************/
-/* Global config */
-/*****************/
+﻿/* minimalblue */
 
 /* Basic CSS functions */
 @import url(/static/base.css);
 
+/* Bookmarks & bookmark editor */
 @import url(/static/bookmark.css);
 
 /* Status bar style & colors */
 @import url(/static/statusbar.css);
 
 /* minimal blue overall settings */
+
+/*****************/
+/* Global config */
+/*****************/
 
 body{
 width: 100%;
