create a common include file and modify headers to remove redundant and circular dependencies

--- a/src/freenet/clients/http/staticfiles/themes/clean/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/theme.css
@@ -1,13 +1,7 @@
-/* clean */
+﻿/* clean */
 
 /* Basic CSS functions */
-@import url(/static/base.css);
-
-/* Bookmarks & bookmark editor */
-@import url(/static/bookmark.css);
-
-/* Status bar style & colors */
-@import url(/static/statusbar.css);
+@import url(/static/common_includes.css);
 
 /* clean overall settings */
 
