--- a/src/freenet/clients/http/staticfiles/themes/boxed/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/boxed/theme.css
@@ -1,13 +1,7 @@
-/* boxed */
+﻿/* boxed */
 
 /* Basic CSS functions */
-@import url(/static/base.css);
-
-/* Bookmarks & bookmark editor */
-@import url(/static/bookmark.css);
-
-/* Status bar style & colors */
-@import url(/static/statusbar.css);
+@import url(/static/common_includes.css);
 
 /* boxed overall settings */ 
 
