--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/theme.css
@@ -1,13 +1,7 @@
 ﻿/* grayandblue */
 
 /* Basic CSS functions */
-@import url(/static/base.css);
-
-/* Bookmarks & bookmark editor */
-@import url(/static/bookmark.css);
-
-/* Status bar style & colors */
-@import url(/static/statusbar.css);
+@import url(/static/common_includes.css);
 
 /* grayandblue overall settings */
 /* [edward@rnahost.com] */
