split clean-static theme into behavior, layout, and color files

--- a/src/freenet/clients/http/staticfiles/themes/clean-static/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean-static/theme.css
@@ -1,15 +1,10 @@
-﻿/* clean-static */
+﻿/* clean-static theme */
 
-/* Base theme */
-@import url(/static/themes/clean/theme.css);
+/* navigation behavior */
+@import url(/static/behavior-static.css);
 
-/* clean-static overall settings */
+/* layout */
+@import url(/static/themes/clean/layout.css);
 
-/* We want the submenus to be always visible */
-div#navbar ul li ul.subnavlist {
-	display: block;
-}
-
-#content {
-	padding-bottom:2em;
-}
+/* color scheme */
+@import url(/static/themes/clean/color.css);
