--- a/src/freenet/clients/http/staticfiles/behavior-static.css
+++ b/src/freenet/clients/http/staticfiles/behavior-static.css
@@ -1,4 +1,4 @@
-﻿/*behavior-dynamic */
+﻿/*behavior-static */
 
 /* Basic CSS functions */
 @import url(/static/common_includes.css);
@@ -8,7 +8,7 @@ div#selected-subnavbar {
 }
 
 div#navbar ul li ul.subnavlist {
-	display: none;
+	display: block;
 }
 
 div#navbar ul:hover + li ul.subnavlist {
