--- a/src/freenet/clients/http/staticfiles/themes/grayandblue-classic/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue-classic/theme.css
@@ -1,8 +1,8 @@
 ﻿/* grayandblue theme */
 
-/* navigation behavior */
-@import url(/static/behavior-dynamic.css);
- 
+/* Basic CSS functions */
+@import url(/static/common_includes.css);
+
 /* layout */
 @import url(/static/themes/grayandblue/layout.css);
 
