--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -1,8 +1,18 @@
 ﻿/* layout-grayandblue */
 
-/* grayandblue overall settings */
+/* overall settings */
 
-p, span, div, td, th, li, h1, h2, h3, h4, h5 {
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+li,
+p,
+span,
+td,
+th {
 	font-family: Verdana;
 	font-weight: normal;
 	font-size: 10pt;
@@ -17,14 +27,16 @@ th {
 	font-weight: bold;
 }
 
-th, td {
+td,
+th {
 	margin: 0;
 	padding: 5px;
 	border-width: 1px;
 	border-style: dotted;
 }
 
-pre, textarea {
+pre,
+textarea {
 	font-family: Courier;
 	font-weight: normal;
 	font-size: 8pt;
@@ -35,7 +47,8 @@ pre#reference {
 	overflow: auto;
 }
 
-table, pre {
+pre,
+table {
 	margin: 0 0 5px 0;
 	padding: 0;
 }
@@ -58,56 +71,64 @@ body {
 /* page's topbar */
 
 #topbar {
-	margin: 0;
-	padding: 5px;
-	min-height: 50px;
 	background-image: url(logo.png);
-	background-repeat: no-repeat;
 	background-position: 200px 8px;
+	background-repeat: no-repeat;
+	margin: 0;
+	min-height: 50px;
+	padding: 5px;
 }
 
 /* Top Title Area */
 #topbar h1 {
+	font-size: 28px;
+	font-weight:900;
 	margin: 0;
 	padding: 20px 0 0 0;
 	text-align: center;
-	font-weight:900;
-	font-size: 28px;
 }
 
 /* navigation */
 
-#navbar {
+div#navbar {
 	border-width: 1px;
 	border-style: dotted;
+	float: left;
 	margin: 5px 5px 10px 10px;
 	padding: 10px;
-	position: absolute;
 	width: 135px;
 }
 
-#navbar ul {
-	margin: 0 0 0 10px;
-	padding: 0;
-}
-
-#navbar li {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-}
-
-#navbar a {
+div#navbar a {
 	font-weight: bold;
 	text-decoration: none;
+	display: block;
+	padding: 1px;
 }
 
-#navlist .subnavlist {
-    display:none;
+div#navbar ul,
+div#navbar ul li ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
 
-#selected-subnavbar {
-    display:none;
+div#navbar ul li ul {
+	margin-left: 20px;
+	padding-bottom: 1px;
+	padding-top: 1px;
+}
+
+div#navbar ul li {
+	padding-top: 5px;
+}
+div#navbar ul li ul li:first-child {
+	padding-top: 0;
+}
+
+div#navbar ul#navlist li.navlist-selected ul li a,
+div#navbar ul#navlist li ul li a {
+	font-size: 0.9em;
 }
 
 /* alerts */
@@ -189,18 +210,6 @@ li.alert-summary-text-minor {
 	right: 5px;
 }
 
-a, a:link {
-	text-decoration: underline;
-}
-
-a:visited { 
-	text-decoration: underline;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
 .interfacelink {
 	text-decoration: underline;
 }
@@ -213,7 +222,8 @@ a:hover {
 
 /* plugins page */
 
-table.plugins th, table.plugins td {
+table.plugins td,
+table.plugins th {
 	font-size: 8pt;
 }
 
@@ -248,7 +258,7 @@ ul.config li {
 	border-bottom-style: solid;
 }
 
-ul.config span.configprefix {
+div.configprefix {
 	margin: 0;
 	padding: 10px 35px 10px 10px;
 	display: block;
@@ -277,13 +287,29 @@ ul.config input[type=text] {
 
 /* darknet page */
 
-table.darknet_connections th, table.darknet_connections td {
+table.darknet_connections td,
+table.darknet_connections th {
 	font-size: 8pt;
 }
 
-table.darknet_connections span {
+table.column td {
+	vertical-align: top;
+}
+
+table.darknet_connections span,
+table.column span {
 	font-weight: bold;
 	font-size: 8pt;
+}
+
+table.column span {
+	text-transform: uppercase;
+}
+
+div.infobox-content ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 tr.messagetypes {
@@ -298,7 +324,10 @@ table.receivedmessagetypes {
 	display: inline;
 }
 
-table.sentmessagetypes th, table.sentmessagetypes td, table.receivedmessagetypes th, table.receivedmessagetypes td {
+table.receivedmessagetypes td,
+table.receivedmessagetypes th,
+table.sentmessagetypes td,
+table.sentmessagetypes th {
 	font-size: 7pt;
 }
 
@@ -332,7 +361,8 @@ div.histogramLabel {
 
 /* queue page */
 
-table.queue th, table.queue td {
+table.queue td,
+table.queue th {
 	font-size: 8pt;
 }
 
@@ -344,6 +374,46 @@ div.queue_tabletitle {
 
 table.queue span {
 	font-size: 8pt;
+}
+
+.progressbar {
+	position: relative;
+	height: 18px;
+	width: 130px;
+	border-width: 1px;
+	border-style: solid;
+}
+
+.progressbar-done {
+	float: left;
+	height: 18px;
+}
+
+.progressbar-min {
+	float: left;
+	height: 18px;
+}
+
+.progressbar-failed {
+	float: left;
+	height: 18px;
+}
+
+.progressbar-failed2 {
+	float: left;
+	height: 18px;
+}
+
+.progress_fraction_finalized {
+	position: absolute;
+	left: 5px;
+	font-weight: bold;
+}
+
+.progress_fraction_not_finalized {
+	position: absolute;
+	left: 5px;
+	font-style: italic;
 }
 
 div.n2ntm-message-text {
@@ -363,8 +433,12 @@ div#statusbar-container {
 	right:0;
 	bottom:0;
 	left:0;
-	text-align: center;
 	z-index:18;
+}
+
+div#statusbar {
+	margin: auto;
+	text-align: center;
 }
 
 div#statusbar div {
@@ -372,8 +446,9 @@ div#statusbar div {
 }
 
 div#statusbar div.progressbar {
+	border: none;
 	display: inline-block;
-	margin-bottom: -3px;
+	margin-bottom: 0px;
 }
 
 div#statusbar div.progressbar div.progress_fraction_finalized {
