--- a/src/freenet/clients/http/staticfiles/behavior-static.css
+++ b/src/freenet/clients/http/staticfiles/behavior-static.css
@@ -1,21 +1,20 @@
-﻿/*behavior-static */
+﻿/*
+ * behavior-static: Always show all submenu items.
+ */
 
 /* Basic CSS functions */
 @import url(/static/common_includes.css);
 
+/* code */
+
+/* We don't need to set any submenu parameters to get this behavior - we just
+ * need to let the elements use their default display: block behavior. */
+
+/* The subnavbar appears under the main navbar and shows the currently selected
+ * submenu items. Most themes prefer to use the ul.subnavlist in the main navbar 
+ * instead so it is not shown by default. */
+
 div#selected-subnavbar {
 	display: none;
-}
-
-div#navbar ul li ul.subnavlist {
-	display: block;
-}
-
-div#navbar ul:hover + li ul.subnavlist {
-	display: block;
-}
-
-div#navbar ul#navlist li:hover ul.subnavlist {
-	display: block;
 }
 
