--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/color.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/color.css
@@ -74,6 +74,13 @@ li.submenuitem-not-selected a:hover {
 	color: #0089e1;
 }
 
+/* this border is only displayed in dropdown mode */
+
+ul.subnavlist-selected,
+ul.subnavlist {
+	border-color: #676767;
+}
+
 /*
  * Alerts
  */
