--- a/src/freenet/clients/http/staticfiles/themes/clean-classic/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean-classic/theme.css
@@ -1,7 +1,7 @@
-﻿/* clean-dropdown theme */
+﻿/* clean-classic theme */
 
 /* navigation behavior */
-@import url(/static/behavior-dropdown.css);
+@import url(/static/behavior-classic.css);
 
 /* layout */
 @import url(/static/themes/clean/layout.css);
