--- a/src/freenet/clients/http/staticfiles/themes/clean/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/layout.css
@@ -69,7 +69,7 @@ body {
 /* page's topbar */
 
 #topbar {
-	background-image: url(logo.png);
+	background-image: url(/static/themes/clean/logo.png);
 	background-position: 30px 3px;
 	background-repeat: no-repeat;
 	border-bottom-style: solid;
@@ -161,27 +161,27 @@ div.infobox div.infobox-header {
 }
 
 div.infobox-information div.infobox-header {
-	background-image: url(information.png);
+	background-image: url(/static/themes/clean/information.png);
 }
 
 div.infobox-warning div.infobox-header {
-	background-image: url(warning.png);
+	background-image: url(/static/themes/clean/warning.png);
 }
 
 div.infobox-alert div.infobox-header {
-	background-image: url(alert.png);
+	background-image: url(/static/themes/clean/alert.png);
 }
 
 div.infobox-error div.infobox-header {
-	background-image: url(error.png);
+	background-image: url(/static/themes/clean/error.png);
 }
 
 div.infobox-query div.infobox-header {
-	background-image: url(query.png);
+	background-image: url(/static/themes/clean/query.png);
 }
 
 div.infobox-success div.infobox-header {
-	background-image: url(success.png);
+	background-image: url(/static/themes/clean/success.png);
 }
 
 ul.alert-summary {
@@ -190,19 +190,19 @@ ul.alert-summary {
 }
 
 li.alert-summary-text-error {
-	background: url(error-16.png) left center no-repeat;
+	background: url(/static/themes/clean/error-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-alert {
-	background: url(alert-16.png) left center no-repeat;
+	background: url(/static/themes/clean/alert-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-warning {
-	background: url(warning-16.png) left center no-repeat;
+	background: url(/static/themes/clean/warning-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-minor {
-	background: url(information-16.png) left center no-repeat;
+	background: url(/static/themes/clean/information-16.png) left center no-repeat;
 }
 
 /* content */
