--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -71,7 +71,7 @@ body {
 /* page's topbar */
 
 #topbar {
-	background-image: url(logo.png);
+	background-image: url(/static/themes/grayandblue/logo.png);
 	background-position: 200px 8px;
 	background-repeat: no-repeat;
 	margin: 0;
@@ -164,27 +164,27 @@ div.infobox div.infobox-header {
 
 
 div.infobox-information div.infobox-header {
-	background-image: url(information.png);
+	background-image: url(/static/themes/grayandblue/information.png);
 }
 
 div.infobox-warning div.infobox-header {
-	background-image: url(warning.png);
+	background-image: url(/static/themes/grayandblue/warning.png);
 }
 
 div.infobox-alert div.infobox-header {
-	background-image: url(alert.png);
+	background-image: url(/static/themes/grayandblue/alert.png);
 }
 
 div.infobox-error div.infobox-header {
-	background-image: url(error.png);
+	background-image: url(/static/themes/grayandblue/error.png);
 }
 
 div.infobox-query div.infobox-header {
-	background-image: url(query.png);
+	background-image: url(/static/themes/grayandblue/query.png);
 }
 
 div.infobox-success div.infobox-header {
-	background-image: url(success.png);
+	background-image: url(/static/themes/grayandblue/success.png);
 }
 
 ul.alert-summary {
@@ -193,19 +193,19 @@ ul.alert-summary {
 }
 
 li.alert-summary-text-error {
-	background: url(error-16.png) left center no-repeat;
+	background: url(/static/themes/grayandblue/error-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-alert {
-	background: url(alert-16.png) left center no-repeat;
+	background: url(/static/themes/grayandblue/alert-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-warning {
-	background: url(warning-16.png) left center no-repeat;
+	background: url(/static/themes/grayandblue/warning-16.png) left center no-repeat;
 }
 
 li.alert-summary-text-minor {
-	background: url(information-16.png) left center no-repeat;
+	background: url(/static/themes/grayandblue/information-16.png) left center no-repeat;
 }
 
 /* content */
