improve content positioning of grayandblue theme in regular and dropdown mode

--- a/src/freenet/clients/http/staticfiles/behavior-dropdown.css
+++ b/src/freenet/clients/http/staticfiles/behavior-dropdown.css
@@ -1,4 +1,4 @@
-﻿/*
+/*
  * behavior-dropdown: Show the navigation menu as a horizontal bar across the
  * top of the screen with dropdown submenus.
 */
